<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ln_frg_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/work_login" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_hello"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/please_login_to_continue"
        android:textColor="@color/gray_light"
        android:textSize="16sp" />


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/text_field_login_email"
        style="@style/textField"
        android:layout_marginTop="30dp"
        android:hint="@string/txt_email"
      >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_login_email"
            style="@style/edittext"
            android:imeOptions="actionNext"
            android:inputType="text" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_login_password"
        style="@style/textField"
        android:layout_marginTop="30dp"
        android:hint="@string/txt_password"
        app:errorTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_login_password"
            style="@style/edittext"
            android:imeOptions="actionGo"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:fontFamily="sans-serif"
        android:text="@string/forgot_password"
        android:textColor="@color/gray_light"
        android:textSize="14sp" />
     

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_login"
        style="@style/button"
        android:layout_marginHorizontal="30dp"
        android:text="@string/txt_bt_login" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/dont_have_account"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:text="@string/txt_sign_up"
                    android:textColor="@color/green"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/green" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>


</LinearLayout>