<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ln_frg_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

   <LinearLayout
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">


       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="15dp"
           android:layout_marginTop="30dp"
           android:fontFamily="sans-serif-light"
      android:paddingVertical="15dp"
           android:text="@string/txt_setting"
           android:textColor="@color/black"
           android:textSize="16sp" />

       <View style="@style/lineView" />

   </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">


        <View style="@style/lineView" />

        <com.balysv.materialripple.MaterialRippleLayout style="@style/materialsRipple">

            <TableRow
                android:id="@+id/tr_personal_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="15dp"
                    android:text="@string/txt_personal_info"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="20dp"
                    android:src="@drawable/ic_next"
                    tools:ignore="contentDescription" />

            </TableRow>

        </com.balysv.materialripple.MaterialRippleLayout>

        <View style="@style/lineView" />

        <com.balysv.materialripple.MaterialRippleLayout style="@style/materialsRipple">


            <TableRow
                android:id="@+id/tr_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:paddingVertical="15dp">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"

                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="15dp"
                    android:text="@string/change_password"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="20dp"
                    android:src="@drawable/ic_next"
                    tools:ignore="contentDescription" />

            </TableRow>
        </com.balysv.materialripple.MaterialRippleLayout>

        <View style="@style/lineView" />

        <com.balysv.materialripple.MaterialRippleLayout style="@style/materialsRipple">


            <TableRow
                android:id="@+id/tr_terms_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:paddingVertical="15dp">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="15dp"
                    android:text="@string/txt_terms_policy"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="20dp"
                    android:src="@drawable/ic_next"
                    tools:ignore="contentDescription" />

            </TableRow>
        </com.balysv.materialripple.MaterialRippleLayout>

        <View style="@style/lineView" />


    </LinearLayout>

    <Button
        android:id="@+id/bt_log_out"
        style="@style/button"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/txt_logout"
        android:textColor="@color/white"
        android:textStyle="bold" />


</LinearLayout>