<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ln_reset_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/bg_background_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/include_reset_password_back"
        layout="@layout/item_back_actionbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ln_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <TextView
                style="@style/textlabel"
                android:text="@string/txt_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textfield_forgot_email"
                style="@style/textField"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_forgot_email"
                    style="@style/edittext"
                    android:autofillHints="emailAddress"

                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/textlabel"
                android:layout_marginTop="20dp"
                android:text="@string/txt_new_password" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_new_password"
                style="@style/textField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_new_password"
                    style="@style/edittext"

                    android:autofillHints="password"

                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/textlabel"
                android:layout_marginTop="20dp"
                android:text="@string/reenter_password" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_confirm_password"
                style="@style/textField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_confirm_password"
                    style="@style/edittext"
                    android:autofillHints="password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_send"
        style="@style/button"
        android:layout_marginHorizontal="30dp"
        android:elevation="10dp"
        android:text="@string/send"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_cardview" />

</androidx.constraintlayout.widget.ConstraintLayout>
